adding reset.css/design-system.html

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link role="stylesheet" href="style.css">
+    <link role="stylesheet" href="reset.css">
     <title>Vite App</title>
   </head>
   <body>
     <div id="app">Mertcan
-<a href="design-system.html"></a>
+<a href="design-system.html">Design System</a>
 
     </div>
   </body>
