Primary Colors added

--- a/design-system.html
+++ b/design-system.html
@@ -1,19 +1,47 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link role="stylesheet" href="style.css">
-    <link role="stylesheet" href="reset.css">
-    <title>ReelFlix-DesignSystem</title>
-  </head>
-  <body>
-    <div id="app">Mertcan
-    <h1>Color System</h1>
-    <div class="rect"><p>Red</p></div>
-        
 
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Signika:wght@300..700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="reset.css">
+  <title>ReelFlix-DesignSystem</title>
+</head>
+
+<body>
+  <header>
+    <h1>COLOR SYSTEM</h1>
+  </header>
+  <section class="home-page">
+    <div class="primary">
+      <div class="primary-ones">
+        <div>
+          <h2>Primary Red</h2>
+          <div class="red-one">Red</div>
+        </div>
+      </div>
+      <div class="primary-ones">
+        <div>
+          <h2>Primary Black</h2>
+          <div class="black-one">Black</div>
+        </div>
+      </div>
     </div>
-  </body>
+
+    <div class="typho-section">
+      <div><h2>Typography Color</h2></div>
+      <div>
+        <div class=""></div>
+
+
+      </div>
+    </div>
+  </section>
+</body>
+
 </html>
