Typography Colors added

--- a/design-system.html
+++ b/design-system.html
@@ -22,25 +22,43 @@
       <div class="primary-ones">
         <div>
           <h2>Primary Red</h2>
-          <div class="red-one">Red</div>
+          <div class="red-one">
+            <p>Red</p>
+          </div>
         </div>
       </div>
       <div class="primary-ones">
         <div>
           <h2>Primary Black</h2>
-          <div class="black-one">Black</div>
+          <div class="black-one">
+            <p>Black</p>
+          </div>
         </div>
       </div>
     </div>
 
     <div class="typho-section">
-      <div><h2>Typography Color</h2></div>
-      <div>
-        <div class=""></div>
-
-
+      <div class="typ-head">
+        <h2>Typography Color</h2>
+      </div>
+      <div class="typho">
+        <div class="typho-colors main-w">
+          <p class="main">MAIN</p>
+          <p>White<br>
+          #120056</p>
+        </div>
+        <div class="typho-colors main-g1">
+          <p>#8C8C8C</p>
+        </div>
+        <div class="typho-colors main-g2">
+          <p>#757575</p>
+        </div>
+        <div class="typho-colors main-g3">
+          <p>#999999</p>
+        </div>
       </div>
     </div>
+
   </section>
 </body>
 
