Background Colors added

--- a/design-system.html
+++ b/design-system.html
@@ -45,7 +45,7 @@
         <div class="typho-colors main-w">
           <p class="main">MAIN</p>
           <p>White<br>
-          #120056</p>
+            #120056</p>
         </div>
         <div class="typho-colors main-g1">
           <p>#8C8C8C</p>
@@ -56,6 +56,48 @@
         <div class="typho-colors main-g3">
           <p>#999999</p>
         </div>
+      </div>
+    </div>
+
+
+    <div class="typho-section">
+      <div class="typ-head ">
+        <h2>Accent Color</h2>
+      </div>
+      <div class="typho accent">
+        <div class="typho-colors accent-blue">
+          <p class="mainAccent-B main">MAIN</p>
+          <p>Blue<br>
+            #0071EB</p>
+        </div>
+        <div class="typho-colors accent-orange">
+          <p class="mainAccent-O main">MAIN</p>
+          <p>Orange<br>
+            #FFA00A</p>
+        </div>
+        <div class="typho-colors accent-green">
+          <p class="mainAccent-G main">MAIN</p>
+          <p>Green<br>
+            #5FA53F</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="typho-section">
+      <div class="typ-head ">
+        <h2>Background Color</h2>
+      </div>
+      <div class="typho accent">
+        <div class="typho-colors accent-Black">
+          <p class="back-Black main">MAIN</p>
+          <p>Black<br>
+            #000000</p>
+        </div>
+        <div class="typho-colors accent-lightB">
+          <p>Black<br>
+            #222222</p>
+        </div>
+      
       </div>
     </div>
 
