--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link role="stylesheet" href="style.css">
-    <link role="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css">
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app">Mertcan
-<a href="design-system.html">Design System</a>
-
+    <div class="app-index"><h1>MERTCAN</h1>
+      <button><a href="design-system.html">Design System</a></button>
+      <button><a href="typography.html">Typography</a></button>
     </div>
   </body>
 </html>
