--- a/design-system.html
+++ b/design-system.html
@@ -15,67 +15,67 @@
 
 <body>
   <header>
-    <h1>COLOR SYSTEM</h1>
+    <h1>🌈COLOR SYSTEM</h1>
   </header>
   <section class="home-page">
     <div class="primary">
-      <div class="primary-ones">
+      <div>
         <div>
           <h2>Primary Red</h2>
-          <div class="red-one">
+          <div class="primary-ones red-one">
             <p>Red</p>
           </div>
         </div>
       </div>
-      <div class="primary-ones">
-        <div>
+      <div >
+        <div class="primary-black">
           <h2>Primary Black</h2>
-          <div class="black-one">
+          <div class="primary-ones black-one">
             <p>Black</p>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="typho-section">
+    <div>
       <div class="typ-head">
         <h2>Typography Color</h2>
       </div>
       <div class="typho">
-        <div class="typho-colors main-w">
+        <div class="squares main-w">
           <p class="main">MAIN</p>
-          <p>White<br>
+          <p>White
             #120056</p>
         </div>
-        <div class="typho-colors main-g1">
+        <div class="squares main-g1">
           <p>#8C8C8C</p>
         </div>
-        <div class="typho-colors main-g2">
+        <div class="squares main-g2">
           <p>#757575</p>
         </div>
-        <div class="typho-colors main-g3">
+        <div class="squares main-g3">
           <p>#999999</p>
         </div>
       </div>
     </div>
 
 
-    <div class="typho-section">
+    <div >
       <div class="typ-head ">
         <h2>Accent Color</h2>
       </div>
       <div class="typho accent">
-        <div class="typho-colors accent-blue">
+        <div class="squares accent-blue">
           <p class="mainAccent-B main">MAIN</p>
           <p>Blue<br>
             #0071EB</p>
         </div>
-        <div class="typho-colors accent-orange">
+        <div class="squares accent-orange">
           <p class="mainAccent-O main">MAIN</p>
           <p>Orange<br>
             #FFA00A</p>
         </div>
-        <div class="typho-colors accent-green">
+        <div class="squares accent-green">
           <p class="mainAccent-G main">MAIN</p>
           <p>Green<br>
             #5FA53F</p>
@@ -83,18 +83,18 @@
       </div>
     </div>
 
-    <div class="typho-section">
+    <div >
       <div class="typ-head ">
         <h2>Background Color</h2>
       </div>
       <div class="typho accent">
-        <div class="typho-colors accent-Black">
+        <div class="squares accent-Black">
           <p class="back-Black main">MAIN</p>
           <p>Black<br>
             #000000</p>
         </div>
-        <div class="typho-colors accent-lightB">
-          <p>Black<br>
+        <div class="squares accent-lightB">
+          <p>Black
             #222222</p>
         </div>
       
