--- a/buttons.html
+++ b/buttons.html
@@ -9,10 +9,10 @@
     <title>ReelFlix</title>
   </head>
   <body>
-    <div class="app-index"><h1>MERTCAN</h1>
-      <button><a href="design-system.html">Design System</a></button>
-      <button><a href="typography.html">Typography</a></button>
-      <button><a href="buttons.html">Buttons</a></button>
-    </div>
+    <header><h1>🖲️BUTTONS</h1></header>
+    <div class="home-page">
+    <button class="primary-button"><img src="public/icons/icon-play.svg"> Play</button>
+    <button class="secondary-button"><img src="public/icons/icon-info.svg"> More Info</button>
+    <button class="other-button">Service Code</button>
   </body>
 </html>
