--- a/typography.html
+++ b/typography.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Signika:wght@300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
-    <title>ReelFlix-DesignSystem</title>
+    <title>ReelFlix</title>
 </head>
 
 <body>
