Typography, Buttons pages finished

--- a/typography.html
+++ b/typography.html
@@ -15,39 +15,180 @@
 
 <body>
     <header>
-        <h1>TYPOGRAPHY</h1>
+        <h1>🅰️TYPOGRAPHY</h1>
     </header>
-    <section class="home-page">
+    <section class="font-page">
 
-        <div class="types">
-            <ul>
+        <div class="types-head">
+            <div>
                 <p>Typeface</p>
                 <h3>Signika</h3>
-            </ul>
-            <ul>
+            </div>
+            <div>
                 <p>Typeface</p>
                 <h3>Heading/H1/Size/Width</h3>
-            </ul>
-            <ul>
+            </div>
+            <div>
                 <p>Typeface</p>
                 <h3>Typography/H1/96px/Light</h3>
-            </ul>
+            </div>
         </div>
 
-        <div class="types type-styles lightBlack">
-            <ul class="first-ones">Type Style</ul>
-            <ul>Weight</ul>
-            <ul>Size</ul>
-            <ul>Line-Height</ul>
-            <ul>Letter-Spacing</ul>
+        <div class="types lightBlack">
+            <div>
+                <p>Type Style</p>
+            </div>
+            <div class="types-in">
+                <p>Weight</p>
+                <p>Size</p>
+                <p>Line-Height</p>
+                <p>Letter-Spacing</p>
+            </div>
         </div>
 
-        <div class="types type-styles">
-          <ul class="first-ones"><h1>H1 - Netflix</h1></ul>
-           <ul>Bold</ul>
-           <ul>50px-3rem</ul>
-           <ul>1.1</ul>
-           <ul>-0.5%</ul>
+        <div class="types">
+            <div>
+                <h1>H1 - Netflix</h1>
+            </div>
+            <div class="types-in">
+                <p>Bold</p>
+                <p>50px-3rem</p>
+                <p>1.1</p>
+                <p>-0.5%</p>
+            </div>
+        </div>
+
+        <div class="types lightBlack">
+            <div>
+                <h2>H2 - Netflix</h2>
+            </div>
+            <div class="types-in">
+                <p>Bold</p>
+                <p>32px-2rem</p>
+                <p>1.1</p>
+                <p>-1%</p>
+            </div>
+        </div>
+
+        <div class="types">
+            <div>
+                <h3>H3 - Netflix</h3>
+            </div>
+            <div class="types-in">
+                <p>Regular</p>
+                <p>26px-1.6rem</p>
+                <p>Auto</p>
+                <p>0.1%</p>
+            </div>
+        </div>
+
+        <div class="types lightBlack">
+            <div>
+                <p class="primary-button-font">Primary Button - Netflix</h2>
+            </div>
+            <div class="types-in">
+                <p>Regular</p>
+                <p>1.2rem</p>
+                <p>Auto</p>
+                <p>0.1%</p>
+            </div>
+        </div>
+
+        <div class="types">
+            <div>
+                <p class="secondary-button-font">Secondary Button - Netflix</h2>
+            </div>
+            <div class="types-in">
+                <p>Regular</p>
+                <p>16px</p>
+                <p>Auto</p>
+                <p>0%</p>
+            </div>
+        </div>
+
+        <div class="types lightBlack">
+            <div>
+                Body - Netflix
+            </div>
+            <div class="types-in">
+                <p>Regular</p>
+                <p>26px</p>
+                <p>Auto</p>
+                <p>0%</p>
+            </div>
+        </div>
+
+        <div class="types">
+            <div>
+                <p class="secondary-button-font">Text Field - Netflix</h2>
+            </div>
+            <div class="types-in">
+                <p>Regular</p>
+                <p>16px</p>
+                <p>Auto</p>
+                <p>0%</p>
+            </div>
+        </div>
+
+        <div class="types lightBlack">
+            <div>
+                <p class="secondary-button-font">Lead - Netflix</h2>
+            </div>
+            <div class="types-in">
+                <p>Regular</p>
+                <p>16px</p>
+                <p>Auto</p>
+                <p>0%</p>
+            </div>
+        </div>
+
+        <div class="types">
+            <div>
+                <p class="subtitle">Subtitle - Netflix</h2>
+            </div>
+            <div class="types-in">
+                <p>Medium</p>
+                <p>19px</p>
+                <p>Auto</p>
+                <p>0.5%</p>
+            </div>
+        </div>
+
+        <div class="types lightBlack opacity-for-types">
+            <div>
+                <p class="error-font">Eror - Netflix</h2>
+            </div>
+            <div class="types-in">
+                <p>Regular</p>
+                <p>15px</p>
+                <p>Auto</p>
+                <p>0%</p>
+            </div>
+        </div>
+
+
+        <div class="types opacity-for-types">
+            <div>
+                <p class="label-font">Label - Netflix</h2>
+            </div>
+            <div class="types-in">
+                <p>Bold</p>
+                <p>13px</p>
+                <p>Auto</p>
+                <p>0%</p>
+            </div>
+        </div>
+
+        <div class="types lightBlack opacity-for-types">
+            <div>
+                <p class="link-font">Link - Netflix</h2>
+            </div>
+            <div class="types-in">
+                <p>Regular</p>
+                <p>13px</p>
+                <p>Auto</p>
+                <p>0%</p>
+            </div>
         </div>
     </section>
 </body>
