--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/icons/MovieBlock/icon-netflix.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
@@ -13,6 +13,7 @@
       <button><a href="design-system.html">Design System</a></button>
       <button><a href="typography.html">Typography</a></button>
       <button><a href="buttons.html">Buttons</a></button>
+      <button><a href="whos-watching.html">Who's Watching?</a></button>
     </div>
   </body>
 </html>
