Movie Cards added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <button><a href="typography.html">Typography</a></button>
       <button><a href="buttons.html">Buttons</a></button>
       <button><a href="whos-watching.html">Who's Watching?</a></button>
+      <button><a href="movie-cards.html">Movie Cards</a></button>
     </div>
   </body>
 </html>
