Movie Cards update

--- a/movie-cards.html
+++ b/movie-cards.html
@@ -15,12 +15,44 @@
         <h1>🎥Movie Cards</h1>
     </header>
     <section class="cards-page home-page">
-       <div class="movie-card">
-        <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo"> 
-        <p class="recently text-field">Recently Added</p>
-        <img src="public/icons/MovieBlock/icon-top10.svg" class="top-ten"> 
-       </div>
-        
+        <div class="movie-card">
+            <div class="movie-card-in">
+                <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
+                <img src="public/icons/MovieBlock/icon-top10.svg" class="top-ten">
+            </div>
+            <div class="recently">
+                <p class="recently-in text-field">Recently Added</p>
+            </div>
+        </div>
+
+        <div class="movie-card">
+            <div class="movie-card-in">
+                <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
+            </div>
+            <div class="recently">
+                <p class="recently-in text-field">Recently Added</p>
+            </div>
+        </div>
+
+        <div class="movie-card">
+            <div class="movie-card-in">
+                <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
+            </div>
+        </div>
+
+        <div class="number-card">
+            <div class="number-card-in">
+                1
+            </div>
+            <div class="movie-card">
+                <div class="movie-card-in">
+                    <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
+                </div>
+                <div class="recently">
+                    <p class="recently-in text-field">Recently Added</p>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 
