--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
   </head>
   <body>
     <div class="app-index"><h1>MERTCAN</h1>
-      <button><a href="design-system.html">Design System</a></button>
-      <button><a href="typography.html">Typography</a></button>
-      <button><a href="buttons.html">Buttons</a></button>
-      <button><a href="whos-watching.html">Who's Watching?</a></button>
-      <button><a href="movie-cards.html">Movie Cards</a></button>
+      <button class="primary-button"><a href="design-system.html">Design System</a></button>
+      <button class="primary-button"><a href="typography.html">Typography</a></button>
+      <button class="primary-button"><a href="buttons.html">Buttons</a></button>
+      <button class="primary-button"><a href="whos-watching.html">Who's Watching?</a></button>
+      <button class="primary-button"><a href="movie-cards.html">Movie Cards</a></button>
+      <button class="primary-button"><a href="reelflix-index.html">ReelFlix</a></button>
     </div>
   </body>
 </html>
