added reelflix-index "Watched to you", "New on Netflix" and "Top 10 Movies in the U.S. Today" sections

--- a/movie-cards.html
+++ b/movie-cards.html
@@ -35,21 +35,18 @@
         </div>
 
         <div class="movie-card">
-            <div class="movie-card-in">
                 <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
-            </div>
         </div>
 
         <div class="number-card">
             <div class="number-card-in">
-                1
+                <p>1</p>
             </div>
             <div class="movie-card">
-                <div class="movie-card-in">
                     <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
-                </div>
+               
                 <div class="recently">
-                    <p class="recently-in text-field">Recently Added</p>
+                    <p class="recently-in">Recently Added</p>
                 </div>
             </div>
         </div>
