İmages added, many adjustments and updates were made

--- a/reelflix-index.html
+++ b/reelflix-index.html
@@ -7,16 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
-    <title>ReelFlix</title>
+    <title>Ana Sayfa - ReelFlix</title>
 </head>
 
-<body>
+<body style="background-color:#000000 ; margin: 0;overflow-X: hidden;">
     <div class="nf-background-color" style="margin: 0; padding-bottom:5rem ;">
         <!---Header Start--->
-        <header style="padding-right:5%;" class="justifycontent-spacebetween allpageleftpadding">
+        <header class="justifycontent-spacebetween still-header alignitems-center">
             <div class="header align-start alignitems-center">
-                <img src="public/icons/Logo.svg" style="padding-right: 2rem;">
-                <div>
+                <a href=""> <img src="public/icons/Logo.svg" style="padding-right: 2rem;"></a>
+                <div class="alignitems-center">
                     <a href="">Home</a>
                     <a href="">TV Shows</a>
                     <a href="">Movies</a>
@@ -25,17 +25,17 @@
                     <a href="">Browse by Languages</a>
                 </div>
             </div>
-            <div class="align-end">
-                <img src="public/icons/Icon/Medium/Search.svg" class="nostretch">
-                <img src="public/icons/Icon/Medium/Notification.svg" class="nostretch">
-                <img src="public/icons/SmallAvatar.svg" class="nostretch">
+            <div class="align-end alignitems-center ">
+                <a href=""> <img src="public/icons/Icon/Medium/Search.svg" class="nostretch"></a>
+                    <a href=""> <img src="public/icons/Icon/Medium/Notification.svg" class="nostretch"></a>
+                        <a href=""> <img src="public/icons/SmallAvatar.svg" class="nostretch"></a>
             </div>
         </header>
         <!---Header End--->
 
         <!---Highlighted Movie Section Start--->
-        <section class=" allpageleftpadding nomargin nopadding">
-            <div class="highlights-div nomargin-nopadding">
+        <section class=" allpageleftpadding nomargin nopadding bgimg alignitems-center" >
+            <div class="highlights-div ">
                 <img src="public/icons/hero-title.png" class="nostretch">
                 <p class="subtitle">Years after retiring from their formidable ninja lives, a dysfunctional family must
                     return to shadowy missions to counteract a string of looming threats.</p>
@@ -52,7 +52,7 @@
         <h3 class=" allpageleftpadding nomargin" style="padding-top: 1rem;">Matched to You</h3>
         <section class="nf-background-color allpageleftpadding" style="padding-bottom: 1rem;">
             <div class="align-start cardslist">
-                <div class="movie-card">
+                <div class="movie-card" style="background-image: url(public/img/prison-break.jpg);">
                     <div class="movie-card-in">
                         <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
                     </div>
@@ -60,15 +60,15 @@
                         <p class="recently-in text-field">Recently Added</p>
                     </div>
                 </div>
-                <div class="movie-card">
+                <div class="movie-card" style="background-image: url(public/img/lost.jpg);">
                     <div class="movie-card-in">
                         <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
                     </div>
                 </div>
-                <div class="movie-card">
+                <div class="movie-card" style="background-image: url(public/img/ersan-kuneri.jpg);">
                     <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
                 </div>
-                <div class="movie-card">
+                <div class="movie-card" style="background-image: url(public/img/la-casa-de-papel.jpg);">
                     <div class="movie-card-in">
                         <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
                         <img src="public/icons/MovieBlock/icon-top10.svg" class="top-ten">
@@ -77,7 +77,7 @@
                         <p class="recently-in text-field">Recently Added</p>
                     </div>
                 </div>
-                <div class="movie-card">
+                <div class="movie-card" style="background-image: url(public/img/walking-dead.jpg);">
                     <div class="movie-card-in">
                         <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
                     </div>
@@ -85,7 +85,7 @@
                         <p class="recently-in text-field">Recently Added</p>
                     </div>
                 </div>
-                <div class="movie-card">
+                <div class="movie-card" style="background-image: url(public/img/breaking-bad.jpg);">
                     <div class="movie-card-in">
                         <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
                     </div>
@@ -93,10 +93,10 @@
                         <p class="recently-in text-field">Recently Added</p>
                     </div>
                 </div>
-                <div class="movie-card">
+                <div class="movie-card" style="background-image: url(public/img/dexter.jpg);">
                     <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
                 </div>
-                <div class="movie-card">
+                <div class="movie-card" style="background-image: url(public/img/vikings.jpg);">
                     <div class="movie-card-in">
                         <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
                         <img src="public/icons/MovieBlock/icon-top10.svg" class="top-ten">
@@ -113,12 +113,7 @@
         <h3 class=" allpageleftpadding nomargin" style="padding-top: 1rem;">New on Netflix</h3>
         <section class=" allpageleftpadding" style="padding-bottom: 1rem;">
             <div class="align-start  cardslist">
-                <div class="movie-card">
-                    <div class="movie-card-in">
-                        <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
-                    </div>
-                </div>
-                <div class="movie-card">
+                <div class="movie-card" style="background-image: url(public/img/walking-dead.jpg);">
                     <div class="movie-card-in">
                         <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
                     </div>
@@ -126,19 +121,18 @@
                         <p class="recently-in text-field">Recently Added</p>
                     </div>
                 </div>
-                <div class="movie-card">
+                <div class="movie-card" style="background-image: url(public/img/breaking-bad.jpg);">
+                    <div class="movie-card-in">
+                        <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
+                    </div>
+                    <div class="recently">
+                        <p class="recently-in text-field">Recently Added</p>
+                    </div>
+                </div>
+                <div class="movie-card" style="background-image: url(public/img/dexter.jpg);">
                     <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
                 </div>
-
-                <div class="movie-card">
-                    <div class="movie-card-in">
-                        <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
-                    </div>
-                    <div class="recently">
-                        <p class="recently-in text-field">Recently Added</p>
-                    </div>
-                </div>
-                <div class="movie-card">
+                <div class="movie-card" style="background-image: url(public/img/vikings.jpg);">
                     <div class="movie-card-in">
                         <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
                         <img src="public/icons/MovieBlock/icon-top10.svg" class="top-ten">
@@ -147,7 +141,7 @@
                         <p class="recently-in text-field">Recently Added</p>
                     </div>
                 </div>
-                <div class="movie-card">
+                <div class="movie-card" style="background-image: url(public/img/prison-break.jpg);">
                     <div class="movie-card-in">
                         <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
                     </div>
@@ -155,7 +149,15 @@
                         <p class="recently-in text-field">Recently Added</p>
                     </div>
                 </div>
-                <div class="movie-card">
+                <div class="movie-card" style="background-image: url(public/img/lost.jpg);">
+                    <div class="movie-card-in">
+                        <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
+                    </div>
+                </div>
+                <div class="movie-card" style="background-image: url(public/img/ersan-kuneri.jpg);">
+                    <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
+                </div>
+                <div class="movie-card" style="background-image: url(public/img/la-casa-de-papel.jpg);">
                     <div class="movie-card-in">
                         <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
                         <img src="public/icons/MovieBlock/icon-top10.svg" class="top-ten">
@@ -164,10 +166,6 @@
                         <p class="recently-in text-field">Recently Added</p>
                     </div>
                 </div>
-                <div class="movie-card">
-                    <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
-                </div>
-
             </div>
         </section>
         <!---New on Netflix Section End--->
@@ -180,7 +178,7 @@
                     <div class="number-card-in">
                         <p>1</p>
                     </div>
-                    <div class="movie-card">
+                    <div class="movie-card" style="background-image: url(public/img/platform2.jpg);">
                         <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
 
                         <div class="recently">
@@ -192,7 +190,7 @@
                     <div class="number-card-in">
                         <p>2</p>
                     </div>
-                    <div class="movie-card">
+                    <div class="movie-card" style="background-image: url(public/img/predator.jpg);">
                         <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
 
                         <div class="recently">
@@ -204,7 +202,7 @@
                     <div class="number-card-in">
                         <p>3</p>
                     </div>
-                    <div class="movie-card">
+                    <div class="movie-card" style="background-image: url(public/img/black-adam.jpg);">
                         <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
 
                         <div class="recently">
@@ -216,7 +214,7 @@
                     <div class="number-card-in">
                         <p>4</p>
                     </div>
-                    <div class="movie-card">
+                    <div class="movie-card" style="background-image: url(public/img/belali-is.jpg);">
                         <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
 
                         <div class="recently">
@@ -228,7 +226,7 @@
                     <div class="number-card-in">
                         <p>5</p>
                     </div>
-                    <div class="movie-card">
+                    <div class="movie-card" style="background-image: url(public/img/tam-bir-centilmen.jpg);">
                         <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
 
                         <div class="recently">
@@ -240,7 +238,7 @@
                     <div class="number-card-in">
                         <p>6</p>
                     </div>
-                    <div class="movie-card">
+                    <div class="movie-card" style="background-image: url(public/img/monsters.jpg);">
                         <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
 
                         <div class="recently">
@@ -252,7 +250,7 @@
                     <div class="number-card-in">
                         <p>7</p>
                     </div>
-                    <div class="movie-card">
+                    <div class="movie-card" style="background-image: url(public/img/miss-peregrines.jpg);">
                         <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
 
                         <div class="recently">
@@ -264,7 +262,7 @@
                     <div class="number-card-in">
                         <p>8</p>
                     </div>
-                    <div class="movie-card">
+                    <div class="movie-card" style="background-image: url(public/img/icinde-kim-var.jpg);">
                         <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
 
                         <div class="recently">
@@ -276,7 +274,7 @@
                     <div class="number-card-in">
                         <p>9</p>
                     </div>
-                    <div class="movie-card">
+                    <div class="movie-card" style="background-image: url(public/img/ghostbusters.jpg);">
                         <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
 
                         <div class="recently">
@@ -288,7 +286,7 @@
                     <div class="number-card-in">
                         <p>10</p>
                     </div>
-                    <div class="movie-card">
+                    <div class="movie-card" style="background-image: url(public/img/mercy.jpg);">
                         <img src="public/icons/MovieBlock/icon-netflix.png" class="nf-logo">
 
                         <div class="recently">
@@ -305,36 +303,38 @@
             <div>
                 <div class="footer-section justifycontent-spacebetween column">
                     <div class="social-media-div row">
-                        <img src="public/icons/facebook.svg">
-                        <img src="public/icons/instagram.svg">
-                        <img src="public/icons/twitter.svg">
-                        <img src="public/icons/youtube.svg">
+                        <a href=""> <img src="public/icons/facebook.svg"></a>
+                        <a href=""> <img src="public/icons/instagram.svg"></a>
+                        <a href=""><img src="public/icons/twitter.svg"></a>
+                        <a href=""> <img src="public/icons/youtube.svg"></a>
                     </div>
                     <div class="row justifycontent-spacebetween">
-                        <div>
-                            <p>Audio Description</p>
-                            <p>Investor Relations</p>
-                            <p>Privacy</p>
-                            <p>Contact Us</p>
-                            <button class="other-button">Service Code</button>
-                            <p class="link-font">©1997 - 2024 Netflix, Inc.</p>
+                        <div class="footer-links column">
+                            <a href="">Audio Description</a>
+                            <a href="">Investor Relations</a>
+                            <a href="">Privacy</a>
+                            <a href="">Contact Us</a>
+                            <div>
+                                <button class="other-button nostretch">Service Code</button>
+                            </div>
+                            <a href="" class="link-font">©1997 - 2024 Netflix, Inc.</a>
                         </div>
-                        <div>
-                            <p>Help Center</p>
-                            <p>Jobs</p>
-                            <p>Legal Notices</p>
-                            <p>Do Not Sell or Share My Personal Information</p>
+                        <div class="footer-links column">
+                            <a href="">Help Center</a>
+                            <a href="">Jobs</a>
+                            <a href="">Legal Notices</a>
+                            <a href="">Do Not Sell or Share My Personal Information</a>
                         </div>
-                        <div>
-                            <p>Gift Cards</p>
-                            <p>Netflix Shop</p>
-                            <p>Cookie Preferences</p>
-                            <p>Add Choices</p>
+                        <div class="footer-links column">
+                            <a href="">Gift Cards</a>
+                            <a href="">Netflix Shop</a>
+                            <a href="">Cookie Preferences</a>
+                            <a href="">Add Choices</a>
                         </div>
-                        <div>
-                            <p>Media Center</p>
-                            <p>Terms Of Use</p>
-                            <p>Corporate Information</p>                            
+                        <div class="footer-links column">
+                            <a href="">Media Center</a>
+                            <a href="">Terms Of Use</a>
+                            <a href="">Corporate Information</a>
                         </div>
                     </div>
                 </div>
