--- a/reelflix-index.html
+++ b/reelflix-index.html
@@ -34,18 +34,18 @@
         <!---Header End--->
 
         <!---Highlighted Movie Section Start--->
-        <section class=" allpageleftpadding nomargin nopadding bgimg alignitems-center" >
-            <div class="highlights-div ">
+                
+        <section class=" allpageleftpadding nomargin nopadding alignitems-center" style="background-image: url(public/img/house-of-ninjas.jpg);background-position: center;background-repeat: no-repeat;">        
+            <div class="highlights-div content">
                 <img src="public/icons/hero-title.png" class="nostretch">
-                <p class="subtitle">Years after retiring from their formidable ninja lives, a dysfunctional family must
-                    return to shadowy missions to counteract a string of looming threats.</p>
+                <p class="subtitle">Years after retiring from their formidable ninja lives, a dysfunctional family must return to shadowy missions to counteract a string of looming threats.</p>
                 <div class="align-start">
-                    <button class="primary-button nomargin" style="margin-right: 1rem;"><img
-                            src="public/icons/icon-play.svg"> Play</button>
+                    <button class="primary-button nomargin" style="margin-right: 1rem;"><img src="public/icons/icon-play.svg"> Play</button>
                     <button class="secondary-button nomargin"><img src="public/icons/icon-info.svg"> More Info</button>
                 </div>
             </div>
         </section>
+    
         <!---Highlighted Movie Section End--->
 
         <!---Matched to You Section Start--->
