--- a/reelflix-index.html
+++ b/reelflix-index.html
@@ -17,7 +17,7 @@
             <div class="header align-start alignitems-center">
                 <a href=""> <img src="public/icons/Logo.svg" style="padding-right: 2rem;"></a>
                 <div class="alignitems-center">
-                    <a href="">Home</a>
+                    <a href="reelflix-index.html">Home</a>
                     <a href="">TV Shows</a>
                     <a href="">Movies</a>
                     <a href="">News & Popular</a>
@@ -28,7 +28,7 @@
             <div class="align-end alignitems-center ">
                 <a href=""> <img src="public/icons/Icon/Medium/Search.svg" class="nostretch"></a>
                     <a href=""> <img src="public/icons/Icon/Medium/Notification.svg" class="nostretch"></a>
-                        <a href=""> <img src="public/icons/SmallAvatar.svg" class="nostretch"></a>
+                        <a href="whos-watching.html"> <img src="public/icons/SmallAvatar.svg" class="nostretch"></a>
             </div>
         </header>
         <!---Header End--->
