--- a/whos-watching.html
+++ b/whos-watching.html
@@ -17,10 +17,10 @@
     <section class="who-page home-page">
         <h1>Who's watching?</h1>
         <div class="typho">
-            <div class="watchers-background"><img src="public/icons/SmallAvatar.svg" class="squares ">Jennifer</div>
-            <div class="watchers-background"><img src="public/icons/SmallAvatar.svg" class="squares ">Bill</div>
-            <div class="watchers-background"><img src="public/icons/SmallAvatar.svg" class="squares ">Alice</div>
-            <div class="watchers-background"><img src="public/icons/SmallAvatar.svg" class="squares ">James</div>
+            <div class="watchers-background"><a href="reelflix-index.html"><img src="public/icons/SmallAvatar.svg" class="squares "></a>Jeniffer</div>
+            <div class="watchers-background"><a href="reelflix-index.html"><img src="public/icons/SmallAvatar.svg" class="squares "></a>Bill</div>
+            <div class="watchers-background"><a href="reelflix-index.html"><img src="public/icons/SmallAvatar.svg" class="squares "></a>Alice</div>
+            <div class="watchers-background"><a href="reelflix-index.html"><img src="public/icons/SmallAvatar.svg" class="squares "></a>James</div>
             <div class="watchers-background"><img src="public/icons/Icon/CirclePlus.svg" class="squares ">Add Profiles</div>
         </div>
         <button class="other-button">Manage Profiles</button>
